Fix some layout issues for authentication

--- a/src/Backend/Core/Layout/Sass/_bootstrap-variables.scss
+++ b/src/Backend/Core/Layout/Sass/_bootstrap-variables.scss
@@ -457,8 +457,8 @@ $form-check-inline-input-margin-x:      .3125rem;
 
 $form-group-margin-bottom:              1rem;
 
-$input-group-addon-color:               $input-color;
-$input-group-addon-bg:                  $gray-200;
+$input-group-addon-color:               $gray-550;
+$input-group-addon-bg:                  $white;
 $input-group-addon-border-color:        $input-border-color;
 
 $custom-control-gutter:                 1.5rem;
