--- a/src/Backend/Core/Layout/Sass/components/_alerts.scss
+++ b/src/Backend/Core/Layout/Sass/components/_alerts.scss
@@ -31,6 +31,11 @@
 
   p {
     display: inline-block;
+    margin-bottom: 0;
+
+    + p {
+      margin-top: $spacer;
+    }
   }
 }
 
