--- a/src/Backend/Core/Layout/Sass/components/_authentication.scss
+++ b/src/Backend/Core/Layout/Sass/components/_authentication.scss
@@ -35,14 +35,6 @@
     height: 46px;
   }
 
-  .input-group-addon {
-    background: $white;
-
-    .svg-inline--fa {
-      color: $gray-550;
-    }
-  }
-
   .forgot-password {
     color: $gray-700;
     font-size: $font-size-base;
